# ai4mi_project

./: Makefile  affine.py  mise.toml  pyproject.toml  slice_segthor.py
student-15188736/: assignment_1_analysis.txt  slice_segthor.py
